# acomp_obras_metro

./: INTEGRACAO_BACKEND.md  README.md  TESTES_POSTMAN.md  index.html  tailwind.config.ts
mss-ai/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
mss-ai/app/: main.py
mss-ai/app/clients/: cache.py  opensearch.py
mss-ai/app/core/: cache_decorator.py  container.py  logger.py  settings.py  validators.py
mss-ai/app/db_models/: __init__.py  dynamodb.py  opensearch.py
mss-ai/app/routes/: health.py
mss-ai/app/routes/bim/: __init__.py  alerts.py  analysis.py  comparison.py  progress.py  projects.py  utils.py
mss-ai/app/schemas/: bim.py
mss-ai/app/services/: bim_analysis.py  comparison_service.py  contextual_prompt_builder.py  element_matcher.py  element_memory_service.py  embedding_service.py  geometric_validator.py  hallucination_mitigation.py  ifc_processor.py  progress_calculator.py  rag_search_service.py  vlm_service.py  vlm_structured_output.py
mss-ai/scripts/: README.md  export_docs.py  quantize_blip2.py
mss-ai/tests/: test_api.py  test_helpers.py
mss-backend/: package-lock.json
mss-backend/src/pages/: Dashboard.tsx  Login.tsx  Perfil.tsx
src/: App.tsx  index.css
src/components/: EditarObraDialog.tsx  GerenciarEquipeDialog.tsx  NovaObraDialog.tsx  NovoUsuarioDialog.tsx  UploadPhotoDialog.tsx
src/pages/: Cadastro.tsx  Dashboard.tsx  Login.tsx  ObraDetalhes.tsx  Perfil.tsx  Usuarios.tsx
src/services/: api.ts
